--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-vue": "^6.0.1",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-textglow": "^1.0.0",
     "vite": "^7.2.4"
   }
 }
